// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`integrations selectors should get channel by type and address 1`] = `
Immutable.Map {
  "id": 1,
  "type": "email",
  "name": "Acme Support",
  "address": "support@acme.gorgias.io",
  "preferred": true,
  "signature": Immutable.Map {
    "text": "cheers, Steve",
    "html": "cheers, <strong>Steve</strong>",
  },
  "verified": true,
  "isDeactivated": false,
}
`;

exports[`integrations selectors should get channels 1`] = `
Immutable.List [
  Immutable.Map {
    "id": 5,
    "type": "email",
    "name": "Acme Billing",
    "address": "billing@acme.gorgias.io",
    "preferred": false,
    "signature": Immutable.Map {
      "text": "cheers, Steve",
      "html": "cheers, <strong>Steve</strong>",
    },
    "verified": true,
    "isDeactivated": false,
  },
  Immutable.Map {
    "id": 7,
    "type": "email",
    "name": "Deactivated gmail",
    "address": "billing+1@acme.gorgias.io",
    "preferred": false,
    "signature": Immutable.Map {
      "text": "cheers, Steve",
      "html": "cheers, <strong>Steve</strong>",
    },
    "verified": true,
    "isDeactivated": true,
  },
  Immutable.Map {
    "id": 1,
    "type": "email",
    "name": "Acme Support",
    "address": "support@acme.gorgias.io",
    "preferred": true,
    "signature": Immutable.Map {
      "text": "cheers, Steve",
      "html": "cheers, <strong>Steve</strong>",
    },
    "verified": true,
    "isDeactivated": false,
  },
  Immutable.Map {
    "id": 15,
    "type": "email",
    "name": "Acme Contact",
    "address": "contact@acme.com",
    "preferred": true,
    "signature": undefined,
    "verified": true,
    "isDeactivated": false,
  },
  Immutable.Map {
    "id": 12,
    "type": "email",
    "name": "Acme Unverified",
    "address": "unverified@gorgias.io",
    "preferred": true,
    "signature": undefined,
    "verified": false,
    "isDeactivated": false,
  },
  Immutable.Map {
    "id": 12,
    "type": "email",
    "name": "Sendgrid Integration",
    "address": "sendgrid@gorgias.io",
    "preferred": true,
    "signature": undefined,
    "verified": false,
    "isDeactivated": false,
  },
]
`;

exports[`integrations selectors should get channels signature 1`] = `
Immutable.Map {
  "text": "cheers, Steve",
  "html": "cheers, <strong>Steve</strong>",
}
`;
